--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
               ofrojmë zgjidhje të plota për rritjen tuaj dixhitale.
             </p>
             <div class="zoho-badge">
-              <i class="fas fa-check-circle"></i> Official Zoho Partner
+              <i class="fas fa-check-circle"></i> Zoho Expert
             </div>
           </div>
 
