removed the price

--- a/prices.html
+++ b/prices.html
@@ -166,8 +166,7 @@
                     ></path>
                   </svg>
                   <span
-                    >60€ Boost (Instagram & Facebook) me optimizim
-                    audience</span
+                    >Boost (Instagram & Facebook) me optimizim audience</span
                   >
                 </li>
                 <li class="flex items-start">
@@ -304,7 +303,7 @@
                       d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v.01M12 6v-1m0-1V4m0 2.01V5M12 20v-1m0-1v-1m0-1v-1m0-1v-1m0-1v-1m0-1v-1m0 0v-1m-4-2h8a2 2 0 012 2v4a2 2 0 01-2 2h-8a2 2 0 01-2-2v-4a2 2 0 012-2z"
                     ></path>
                   </svg>
-                  <span>60€ Boost (Instagram & Facebook)</span>
+                  <span>Boost (Instagram & Facebook)</span>
                 </li>
               </ul>
             </div>
