added some changes

--- a/index.html
+++ b/index.html
@@ -783,6 +783,7 @@
             <li><a href="#about" class="nav-link">Rreth Nesh</a></li>
             <li><a href="#partners" class="nav-link">Partnerët</a></li>
             <li><a href="#contact" class="nav-link">Kontakti</a></li>
+            <li><a href="/clients.html" class="nav-link">Pako Avancuar</a></li>
           </ul>
           <button class="menu-toggle" id="menuToggle">
             <span></span>
@@ -929,7 +930,7 @@
                 Editim Profesional i Videove dhe Postimeve
               </li>
             </ul>
-            <a href="#contact" class="btn-pricing">Zgjidhni Paketën</a>
+            <a href="/clients.html" class="btn-pricing">Mëso më Shumë</a>
           </div>
 
           <div class="pricing-card featured fade-in">
