--- a/index.html
+++ b/index.html
@@ -769,6 +769,20 @@
       }
     </style>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-NNZDFPH2RM"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-NNZDFPH2RM");
+  </script>
   <body>
     <nav id="navbar">
       <div class="container">
