--- a/prices.html
+++ b/prices.html
@@ -64,6 +64,20 @@
       }
     </style>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-NNZDFPH2RM"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-NNZDFPH2RM");
+  </script>
   <body class="bg-slate-900 text-gray-200">
     <div class="relative min-h-screen w-full mx-auto p-4 sm:p-8 md:p-12">
       <div class="decorative-bg"></div>
