added the blog nav

--- a/index.html
+++ b/index.html
@@ -798,6 +798,7 @@
             <li><a href="#partners" class="nav-link">Partnerët</a></li>
             <li><a href="#contact" class="nav-link">Kontakti</a></li>
             <li><a href="/clients.html" class="nav-link">Pako Avancuar</a></li>
+            <li><a href="/blog.html" class="nav-link">Blog</a></li>
           </ul>
           <button class="menu-toggle" id="menuToggle">
             <span></span>
