--- a/klient-4-11.html
+++ b/klient-4-11.html
@@ -378,33 +378,78 @@
         </div>
 
         <div class="pricing-grid">
-          <div class="pricing-card featured fade-in">
+          <div
+            class="pricing-card featured fade-in"
+            style="animation-delay: 0.1s"
+          >
             <span class="pricing-badge">Pako Fleksibël</span>
             <div class="pricing-header">
               <h3 class="pricing-title">Pako Marketingu Custom</h3>
               <p class="pricing-subtitle">Përshtatur për ju</p>
             </div>
-            <div class="pricing-price">200€ <span>/ muaj</span></div>
+
+            <div class="pricing-price">
+              200€ <span>/ muaj (Tarifa jonë)</span>
+            </div>
+
             <ul class="pricing-features">
               <li>
                 <i class="fas fa-check"></i>
-                <strong>Menaxhim i Plotë Marketingu Dixhital:</strong>
-                Strategji, menaxhim i rrjeteve sociale, dhe më shumë.
+                <strong>Menaxhim i Plotë Marketingu (Tarifa bazë 200€):</strong>
+                Strategji, menaxhim i rrjeteve sociale, optimizim i vazhdueshëm
+                & raportim.
               </li>
               <li>
-                <i class="fas fa-plus"></i>
-                <strong>Shërbim Fotografi Profesional:</strong> +40€ / për çdo
-                herë (opsionale sipas kërkesës).
+                <i class="fas fa-camera"></i>
+                <strong>Fotografi Profesionale (Opsionale):</strong> +40€ / për
+                seancë. <br /><small>(Rekomandojmë 2 seanca/muaj = 80€)</small>
               </li>
               <li>
                 <i class="fas fa-wallet"></i>
-                <strong>Buxheti i Reklamave (Boost):</strong> Paguhet direkt nga
-                klienti. Ju keni kontroll të plotë mbi shpenzimet e reklamave.
+                <strong>Buxheti i Reklamave (Boost):</strong> Paguhet nga ju.
+                <br /><small
+                  >(Rekomandojmë të fillojmë me 100€/muaj dhe e
+                  përshtasim).</small
+                >
               </li>
-              <li>
-                <i class="fas fa-chart-line"></i>
-                <strong>Optimizim i Vazhdueshëm & Raportim:</strong> Monitorim
-                dhe përshtatje e strategjisë për rezultate maksimale.
+
+              <hr
+                style="
+                  border-color: var(--glass-border);
+                  margin: 1.25rem 0 1rem;
+                "
+              />
+
+              <li style="align-items: center">
+                <i class="fas fa-calculator" style="margin-top: 0"></i>
+
+                <div style="flex-grow: 1; line-height: 1.6">
+                  <span
+                    style="
+                      font-weight: 700;
+                      color: var(--text-primary);
+                      font-size: 1.1rem;
+                      display: block;
+                    "
+                  >
+                    Total i Rekomanduar: ~380€
+                  </span>
+
+                  <small
+                    style="
+                      font-size: 0.875rem;
+                      color: var(--text-secondary);
+                      display: block;
+                      line-height: 1.5;
+                    "
+                  >
+                    (
+                    <span style="font-size: 0.9em; color: #7a8a9e"
+                      >200€ tarifa jonë</span
+                    >
+                    + 80€ fotot + 100€ boost )
+                  </small>
+                </div>
               </li>
             </ul>
           </div>
