--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
             />
           </div>
           <div class="about-content fade-in">
-            <h2>Endri - Technology Systems Director</h2>
+            <h2>Endri Guma - Technology Systems Director</h2>
             <p>
               I pasionuar për të ndihmuar bizneset të arrijnë performancën
               maksimale përmes implementimit dhe optimizimit strategjik të
