--- a/index.html
+++ b/index.html
@@ -897,6 +897,9 @@
     <section id="pricing">
       <div class="container">
         <div class="section-header fade-in">
+          <span class="section-badge">
+            <i class="fas fa-tag"></i> Ofertat e Fundit
+          </span>
           <h2 class="section-title">Paketat Tona Profesionale</h2>
           <p class="section-subtitle">
             Përfitoni nga ofertat speciale! Çdo paketë është dizajnuar për të
