added paysera meta

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="verify-paysera" content="5d4b22391833a8be92e38f1d179fe9cf" />
     <meta
       name="description"
       content="BC Digital - Ekspertë të Zoho & Automatizimit të Biznesit në Shqipëri. Transformojmë bizneset përmes teknologjisë moderne, marketingut dixhital dhe zgjidhjeve AI."
